--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ scikit-learn = "^1.3.1"
 pygame = "^2.5.2"
 networkx = "^3.1"
 sklearn-som = "^1.1.0"
+torch = "^2.1.1"
+torchvision = "^0.16.1"
 
 
 [build-system]
